--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Validate InReact | by Muhammadqodir</title>
+    <title>Form Alternative todoList InReact | by Muhammadqodir</title>
   </head>
 
   <body>
